# render

./: Cargo.toml  nixpacks.toml
src/: lib.rs  main.rs
src/post/: render.rs
src/rend/: builder.rs  mod.rs  render.rs
src/rend/misc/: mesh.rs  triangle.rs
