[package]
name = "renderenko"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

# [[bench]]
# name = "arc_benchmark"
# harness = false

[dependencies.uuid]
version = "1.8.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[dependencies]
fast_image_resize = {version = "4.0.0", features = ["image"]}
nalgebra = "0.32.5"
tiny-skia = "0.11.4"
image = "0.25.1"
actix-web = "4"
axum = "0.7.5"
serde = {version = "1.0.203", features = ["derive"] }
tokio = { version = "1", features = ["full","rt-multi-thread"] }
tracing-subscriber = "0.3.18"
actix-multipart = "0.6.2"
derive_more = "0.99.17"
http-serde = "2.1.1"
# tokio = "1.39.2"
